--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,9 @@ python = "3.8"
 gpt-wrapper = {git = "https://github.com/JoongWonSeo/gpt-wrapper.git"}
 qdrant-client = "^1.7.0"
 python-dotenv = "^1.0.0"
+fastapi = "^0.108.0"
+jsonpatch = "^1.33"
+uvicorn = {extras = ["standard"], version = "^0.25.0"}
 
 
 [build-system]
