--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,8 +16,8 @@ uvicorn = {extras = ["standard"], version = "^0.25.0"}
 
 
 [tool.poetry.scripts]
-copilot = "backend.server.server:start"
-copilot-dev = "backend.server.server:dev"
+server = "backend.server.server:start"
+server-dev = "backend.server.server:dev"
 
 [build-system]
 requires = ["poetry-core"]
