fix python version

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Joong-Won Seo <joong.won.seo@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
 gpt-wrapper = {git = "https://github.com/JoongWonSeo/gpt-wrapper.git"}
 qdrant-client = "^1.7.0"
 python-dotenv = "^1.0.0"
