--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@nextui-org/switch": "2.0.25",
     "@nextui-org/system": "2.0.15",
     "@nextui-org/theme": "2.1.17",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@react-aria/ssr": "^3.8.0",
     "@react-aria/visually-hidden": "^3.8.6",
     "@rjsf/core": "^5.15.1",
@@ -30,7 +31,8 @@
     "@types/react-dom": "18.2.7",
     "allotment": "^1.19.3",
     "autoprefixer": "10.4.16",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "eslint": "8.48.0",
     "eslint-config-next": "14.0.2",
     "fast-json-patch": "^3.1.1",
@@ -39,6 +41,7 @@
     "intl-messageformat": "^10.5.0",
     "js-beautify": "^1.14.11",
     "js-file-download": "^0.4.12",
+    "lucide-react": "^0.311.0",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
@@ -51,8 +54,10 @@
     "remark-math": "^6.0.0",
     "sass": "^1.69.5",
     "sonner": "^1.3.1",
+    "tailwind-merge": "^2.2.0",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
     "use-immer": "^0.9.0"
   },
