--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@uidotdev/usehooks": "^2.4.1",
     "allotment": "^1.19.3",
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.0",
@@ -59,10 +60,12 @@
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
-    "use-immer": "^0.9.0"
+    "use-immer": "^0.9.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/js-beautify": "^1.14.3"
+    "@types/js-beautify": "^1.14.3",
+    "@types/uuid": "^9.0.7"
   }
 }
