--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.0",
     "eslint": "8.48.0",
     "eslint-config-next": "14.0.2",
     "fast-json-patch": "^3.1.1",
@@ -47,6 +48,7 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
