--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ fastapi = "^0.108.0"
 jsonpatch = "^1.33"
 uvicorn = {extras = ["standard"], version = "^0.25.0"}
 yagmail = "^0.15.293"
+markdown = "^3.5.2"
 
 
 [tool.poetry.scripts]
