--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "js-file-download": "^0.4.12",
     "lucide-react": "^0.311.0",
     "next": "^14.0.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
